--- a/index.ipynb
+++ b/index.ipynb
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,12 +1118,13 @@
     "iterable = 0\n",
     "for city in city_names:\n",
     "    city_populations += [cities[iterable]['Population']]\n",
-    "    iterable += 1"
+    "    iterable += 1\n",
+    "return city pop"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1133,7 @@
        "[2891, 2732, 929, 559, 288, 93, 60, 44, 33, 3, 2, 0]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
