Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1110,16 +1110,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-12-c5b7434df65e>, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-c5b7434df65e>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    return city populations\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "city_populations = []\n",
     "iterable = 0\n",
     "for city in city_names:\n",
     "    city_populations += [cities[iterable]['Population']]\n",
     "    iterable += 1\n",
-    "return city pop"
+    "return city_popula"
    ]
   },
   {
