--- a/index.ipynb
+++ b/index.ipynb
@@ -1070,12 +1070,12 @@
    ],
    "source": [
     "names_and_ranks = [] \n",
-    "iterable = 1\n",
+    "iterable = 0\n",
     "for city in city_names:\n",
-    "    names_and_ranks.append(['{}. {}'.format(city_indices[iterable], city_names[iterable])])\n",
+    "    names_and_ranks.append(['{}. {}'.format(city_indices[iterable+1)], city_names[iterable])])\n",
     "    iterable += 1\n",
     "    \n",
-    "names_and_ranks\n",
+    "return names_and_ranks\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
