--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,15 +1053,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-29-3fd9d6ec0c2e>, line 5)",
+     "evalue": "invalid syntax (<ipython-input-30-bfcbd4bd576c>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-29-3fd9d6ec0c2e>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    return names_and_ranks\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-30-bfcbd4bd576c>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    names_and_ranks.append(['{}. {}'.format(city_indices[i], city_names[i]))\u001b[0m\n\u001b[0m                                                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -1069,7 +1069,8 @@
     "names_and_ranks = [] \n",
     "i = 0\n",
     "for city in city_names:\n",
-    "    names_and_ranks.append(['{}. {}'.format(city_indices[i], city_names[i])\n",
+    "    names_and_ranks.append(['{}. {}'.format(city_indices[i], city_names[i]))\n",
+    "    i += 1\n",
     "    return names_and_ranks\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
